-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0
-
None
-
Gentoo Linux
This might be two different bugs but... if building against system FFmpeg (regardless of version), the build fails like so:
../../../../qtwebengine-5.12.9999/src/3rdparty/chromium/third_party/webrtc/modules/video_coding/codecs/vp9/vp9_impl.cc:727:23: error: ‘const struct vpx_codec_cx_pkt::<unnamed union>::<unnamed>’ has no member named ‘height’ pkt->data.frame.height[layer_id.spatial_layer_id]; ^~~~~~ ../../../../qtwebengine-5.12.9999/src/3rdparty/chromium/third_party/webrtc/modules/video_coding/codecs/vp9/vp9_impl.cc:729:23: error: ‘const struct vpx_codec_cx_pkt::<unnamed union>::<unnamed>’ has no member named ‘width’ pkt->data.frame.width[layer_id.spatial_layer_id]; ^~~~~
The upstream change fixing this is here:
https://chromium-review.googlesource.com/c/webm/libvpx/+/798222
Unfortunately, there is no release available with said fix in it at this time.
While making 'system-libvpx' optional, and using the bundled copy allows for compiling against FFmpeg 3.4.4, there will be run-time issues like this when attempting to play, for example, YouTube videos:
[4733:4797:0826/134803.686361:ERROR:render_media_log.cc(30)] MediaEvent: MEDIA_ERROR_LOG_ENTRY {"error":"audio decoder initialization failed"}
[4733:4733:0826/134803.686530:ERROR:render_media_log.cc(30)] MediaEvent: PIPELINE_ERROR DECODER_ERROR_NOT_SUPPORTED
[4733:4797:0826/134804.063194:ERROR:render_media_log.cc(30)] MediaEvent: MEDIA_ERROR_LOG_ENTRY {"error":"audio decoder initialization failed"}
[4733:4733:0826/134804.064210:ERROR:render_media_log.cc(30)] MediaEvent: PIPELINE_ERROR DECODER_ERROR_NOT_SUPPORTED
I have so far tested only with the Falkon browser.
Another option that makes the build succeed, is to disable the 'webrtc' feature, but run-time issues will occur (similar to above).