Restore media::FFmpegGlue::InitializeFFmpeg()

Commit 7e8eba2d8755962d9dca5eade57bf8f591a73c0c in FFmpeg, first released in
version 4.0, removes the need to call av_register_all() at startup. The bundled
version of FFmpeg was updated in Chromium 67 and now includes this commit. Along
with this update all FFmpeg initialization code was removed from Chromium.

Consequently, when using system FFmpeg <4, no codecs will be initialized.

This patch restores FFmpeg initialization code to support system FFmpeg <4.

See also https://chromium-review.googlesource.com/964248 .

Task-number: QTBUG-70183
Change-Id: If43aa790ec2eaebe205ed84b9efcb0215c361917
Reviewed-by: Jimi Huotari <chiitoo@gentoo.org>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>