chromium/media/filters/ffmpeg_glue.cc
@@ -58,6 +58,10 @@ static int64_t AVIOSeekOperation(void* opaque, int64_t offset, int whence) {
   return new_offset;
 }
 
+void FFmpegGlue::InitializeFFmpeg() {
+  av_register_all();
+}
+
 static void LogContainer(bool is_local_file,
                          container_names::MediaContainerName container) {
   base::UmaHistogramSparse("Media.DetectedContainer", container);
@@ -66,6 +70,8 @@ static void LogContainer(bool is_local_file,
 }
 
 FFmpegGlue::FFmpegGlue(FFmpegURLProtocol* protocol) {
+  InitializeFFmpeg();
+
   // Initialize an AVIOContext using our custom read and seek operations.  Don't
   // keep pointers to the buffer since FFmpeg may reallocate it on the fly.  It
   // will be cleaned up
